# coffe-shop-test

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py
app/api/: __init__.py
app/api/rest/: __init__.py  auth.py  users.py
app/cache/: __init__.py  exceptions.py
app/cache/models/: user.py  users.py
app/cache/repos/: __init__.py  user.py  users.py
app/core/: authentication.py  container.py  environment.py  exceptions.py  worker.py
app/db/models/: __init__.py  user.py
app/db/repos/: __init__.py  user.py
app/schemas/rest/: __init__.py  auth.py  users.py
app/services/: __init__.py
app/services/rest/: auth.py  users.py
app/unions/: __init__.py  user.py
migrations/: env.py
migrations/versions/: 29929d31e4d8_initial.py
